# AGH

./: README.md
AiSD/AlgoZadanie1/: AlgoZadanie1.sln
AlgoDrzewoBST/: AlgoDrzewoBST.sln
AlgoDrzewoBST/AlgoDrzewoBST/: AlgoDrzewoBST.vcxproj
AlgoSortowanie/: AlgoSortowanie.sln
AlgoZadanie1/AlgoZadanie1/: AlgoZadanie1.cpp
Algo_listy/: Algo_listy.sln
Algo_listy/Algo_listy/: Algo_listy.vcxproj.filters
Arduino/: arduino.c
Arduino/arduino_laby/: arduino_laby.ino  (+3 more)
Grafika/: Grafika_testy_Transformacje.cpp  grafika_smichon_lab1.cpp  lab4zad2Czesciowe.cpp  smichon_Grafika_lab4_zad1.cpp  smichon_grafika_lab2Zad2.cpp  smichon_grafika_lab3zad1.cpp  smichon_grafika_lab3zad2.cpp  smichon_grafika_trocheMniejLopatologicznie.cpp  smichon_tekstury_dwieOsobne.cpp  zad1_lopatologicznie_smichon.cpp
Inzynieria_Wiedzy_i_Systemy_Ekspertowe/: SugenoZad1.fis  Zraszacz.fis  j2.fis  klima-v1.fis  klima-v2.fis  lab3zad1.fis  lab3zad1podpB.fis  lab3zad3.fis  lab4_anfis_1.fis
MES/: MES_Szymon_Michon.xlsx  MES_smichon_lab3.xlsm  SzymonMichonLab4.xlsm
Matlab/: sprawdzCzyLiczbaJestPierwsza.m  wypiszDzielnikiLiczb.m  wyznaczaniePi.m
Optymalizacja/optymalizacja_lab_1_pliki_zrodlowe/: CMakeLists.txt  main.cpp  matrix.cpp  opt_alg.cpp  solution.cpp  user_funs.cpp  user_funs.h
PodstawyProgramowania/: histogram.c  kopiowanie.c  switch.c  test_pierwiastka.c  wskazniki_simple.c
StatystycznaAnalizaDanych/: cwiczenie1.R  dane_grA.csv  egzamin.r  first_lab.R  lab2.R  wnioskowanie_statystyczne.r  zadanie.R
SztucznaInteligencja/: aiRozpoznawanieMowy.py
metodyNumeryczne/: gaussMethod.cpp
(+157 files in other folders)
